--- a/quotes.css
+++ b/quotes.css
@@ -69,11 +69,12 @@ body{
 .result{
     padding-top: 10%;
 }
-.copyright p{
+/* .copyright p{
     background-color: black;
     color: white;
     position: absolute;
     bottom: 2px;
     width: 100%;
+    margin-top: 30px;
     text-align: center;
-}
+} */
